# stellar

./: .dockerignore  .gitignore  Caddyfile  README.md  codecov.yml  notify.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/web/: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  PROJECT.md  README.md  env.example  last_auto_update.txt  next.config.ts  package-lock.json  package.json
apps/web/.github/workflows/: auto-dev-commit.yml  auto-main-commit.yml
apps/web/.yalc/@pollar/core/: README.md  package.json  yalc.sig
apps/web/.yalc/@pollar/react/: README.md  package.json  yalc.sig
apps/web/.yalc/@pollar/stellar-wallets-kit-adapter/: README.md  package.json  yalc.sig
apps/web/contracts/vaquita-pool/: Cargo.toml  Makefile
apps/web/contracts/vaquita-pool/src/: defindex_vault.rs  error.rs  lib.rs  test.rs
apps/web/public/: umami.js
apps/web/public/icons/achievements/: README.md
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/(private)/: layout.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: Logo.tsx  Navigation.tsx
apps/web/src/helpers/: network.ts
apps/web/src/networks/: helpers.ts
apps/web/src/stores/: index.ts  privy.ts
contracts/vaquita-badges/: Cargo.toml
contracts/vaquita-badges/src/: admin.rs  error.rs  events.rs  lib.rs  mint_policy.rs  pause.rs  storage.rs  types.rs  upgrade.rs
contracts/vaquita-badges/src/test/: badges_test.rs  event_payloads.rs  mod.rs  types_test.rs  upgrade_pause_test.rs
(+837 files in other folders)
